--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,11 +20,14 @@
   },
   "homepage": "https://github.com/xtrent777x/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "webpack": "^5.58.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.0"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "image-webpack-loader": "^8.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1"
   }
